plugins/binding/rust/source/TellusimRSMath.rs


/*
 */
declare_vector_op!(Vector3u, Mul, mul, tsVector3u_mul);
declare_vector_op!(Vector3u, Div, div, tsVector3u_div);
declare_vector_op!(Vector3u, Add, add, tsVector3u_add);
declare_vector_op!(Vector3u, Sub, sub, tsVector3u_sub);
declare_vector_op!(Vector3u, BitAnd, bitand, tsVector3u_and);
declare_vector_op!(Vector3u, BitOr,  bitor,  tsVector3u_or);
declare_vector_op!(Vector3u, BitXor, bitxor, tsVector3u_xor);

/*
 */
extern "C" {
	fn tsVector3u_mul1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_div1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_add1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_sub1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_and1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_or1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_xor1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_shl1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_shr1(ret: *mut Vector3u, v0: *const Vector3u, v1: u32) -> *mut Vector3u;
	fn tsVector3u_mul(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_div(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_add(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_sub(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_and(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_or(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_xor(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_min(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_max(ret: *mut Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
	fn tsVector3u_clamp(ret: *mut Vector3u, v: *const Vector3u, v0: *const Vector3u, v1: *const Vector3u) -> *mut Vector3u;
}

/*****************************************************************************\
 *
 * Vector3f
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Vector3f {
	pub x: f32,
	pub y: f32,
	pub z: f32,
}

/*
 */
impl Vector3f {
	
	pub fn new_s(v: f32) -> Vector3f {
		Vector3f { x: v, y: v, z: v }
	}
	pub fn new_v2(v: &Vector2f, z: f32) -> Vector3f {
		Vector3f { x: v.x, y: v.y, z: z }
	}
	pub fn new_v3i(v: &Vector3i) -> Vector3f {
		Vector3f { x: v.x as f32, y: v.y as f32, z: v.z as f32 }
	}
	pub fn new_v3u(v: &Vector3u) -> Vector3f {
		Vector3f { x: v.x as f32, y: v.y as f32, z: v.z as f32 }
	}
	pub fn new_v3d(v: &Vector3d) -> Vector3f {
		Vector3f { x: v.x as f32, y: v.y as f32, z: v.z as f32 }
	}
	pub fn new_v4(v: &Vector4f) -> Vector3f {
		Vector3f { x: v.x, y: v.y, z: v.z }
	}
	pub fn new(x: f32, y: f32, z: f32) -> Vector3f {
		Vector3f { x: x, y: y, z: z }
	}
	pub fn newf(v: &[f32]) -> Vector3f {
		Vector3f { x: v[0], y: v[1], z: v[2] }
	}
	
	pub fn abs(&self) -> Vector3f {
		let mut ret = Vector3f::default();
		unsafe { tsVector3f_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector3f, v1: &Vector3f) -> Vector3f {
		let mut ret = Vector3f::default();
		unsafe { tsVector3f_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector3f, v1: &Vector3f) -> Vector3f {
		let mut ret = Vector3f::default();
		unsafe { tsVector3f_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector3f, v1: &Vector3f) -> Vector3f {
		let mut ret = Vector3f::default();
		unsafe { tsVector3f_clamp(&mut ret, self, v0, v1); }
		ret
	}
	pub fn saturate(&self) -> Vector3f {
		let mut ret = Vector3f::default();
		unsafe { tsVector3f_saturate(&mut ret, self); }
		ret
	}
	
	pub fn dot(v0: &Vector3f, v1: &Vector3f) -> f32 {
		unsafe { tsVector3f_dot(v0, v1) }
	}
	pub fn cross(v0: &Vector3f, v1: &Vector3f) -> Vector3f {
		let mut ret = Vector3f::default();
		unsafe { tsVector3f_cross(&mut ret, v0, v1); }
		ret
	}
	
	pub fn length(&self) -> f32 {
		unsafe { tsVector3f_length(self) }
	}
	pub fn normalize(&self) -> Vector3f {
		let mut ret = Vector3f::default();
		unsafe { tsVector3f_normalize(&mut ret, self); }
		ret
	}
	
	pub fn lerp(v0: &Vector3f, v1: &Vector3f, k: f32) -> Vector3f {
		let mut ret = Vector3f::default();
		unsafe { tsVector3f_lerp(&mut ret, v0, v1, k); }
		ret
	}
	
	pub fn zero() -> Vector3f {
		Vector3f { x: 0.0, y: 0.0, z: 0.0 }
	}
	pub fn one() -> Vector3f {
		Vector3f { x: 1.0, y: 1.0, z: 1.0 }
	}
}

/*
 */
impl fmt::Display for Vector3f {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2})", self.x, self.y, self.z)
	}
}

/*
 */
declare_neg_op!(Vector3f, tsVector3f_neg);

/*
 */
declare_scalar_op!(Vector3f, f32, Mul, mul, tsVector3f_mul1);
declare_scalar_op!(Vector3f, f32, Div, div, tsVector3f_div1);
declare_scalar_op!(Vector3f, f32, Add, add, tsVector3f_add1);
declare_scalar_op!(Vector3f, f32, Sub, sub, tsVector3f_sub1);

/*
 */
declare_vector_op!(Vector3f, Mul, mul, tsVector3f_mul);
declare_vector_op!(Vector3f, Div, div, tsVector3f_div);
declare_vector_op!(Vector3f, Add, add, tsVector3f_add);
declare_vector_op!(Vector3f, Sub, sub, tsVector3f_sub);

/*
 */
extern "C" {
	fn tsVector3f_abs(ret: *mut Vector3f, v: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_neg(ret: *mut Vector3f, v: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_mul1(ret: *mut Vector3f, v0: *const Vector3f, v1: f32) -> *mut Vector3f;
	fn tsVector3f_div1(ret: *mut Vector3f, v0: *const Vector3f, v1: f32) -> *mut Vector3f;
	fn tsVector3f_add1(ret: *mut Vector3f, v0: *const Vector3f, v1: f32) -> *mut Vector3f;
	fn tsVector3f_sub1(ret: *mut Vector3f, v0: *const Vector3f, v1: f32) -> *mut Vector3f;
	fn tsVector3f_mul(ret: *mut Vector3f, v0: *const Vector3f, v1: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_div(ret: *mut Vector3f, v0: *const Vector3f, v1: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_add(ret: *mut Vector3f, v0: *const Vector3f, v1: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_sub(ret: *mut Vector3f, v0: *const Vector3f, v1: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_min(ret: *mut Vector3f, v0: *const Vector3f, v1: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_max(ret: *mut Vector3f, v0: *const Vector3f, v1: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_clamp(ret: *mut Vector3f, v: *const Vector3f, v0: *const Vector3f, v1: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_saturate(ret: *mut Vector3f, v: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_dot(v0: *const Vector3f, v1: *const Vector3f) -> f32;
	fn tsVector3f_cross(ret: *mut Vector3f, v0: *const Vector3f, v1: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_length(v: *const Vector3f) -> f32;
	fn tsVector3f_normalize(ret: *mut Vector3f, v: *const Vector3f) -> *mut Vector3f;
	fn tsVector3f_lerp(ret: *mut Vector3f, v0: *const Vector3f, v1: *const Vector3f, k: f32) -> *mut Vector3f;
}

/*****************************************************************************\
 *
 * Vector3d
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Vector3d {
	pub x: f64,
	pub y: f64,
	pub z: f64,
}

/*
 */
impl Vector3d {
	
	pub fn new_s(v: f64) -> Vector3d {
		Vector3d { x: v, y: v, z: v }
	}
	pub fn new_v2(v: &Vector2d, z: f64) -> Vector3d {
		Vector3d { x: v.x, y: v.y, z: z }
	}
	pub fn new_v3i(v: &Vector3i) -> Vector3d {
		Vector3d { x: v.x as f64, y: v.y as f64, z: v.z as f64 }
	}
	pub fn new_v3u(v: &Vector3u) -> Vector3d {
		Vector3d { x: v.x as f64, y: v.y as f64, z: v.z as f64 }
	}
	pub fn new_v3f(v: &Vector3f) -> Vector3d {
		Vector3d { x: v.x as f64, y: v.y as f64, z: v.z as f64 }
	}
	pub fn new_v4(v: &Vector4d) -> Vector3d {
		Vector3d { x: v.x, y: v.y, z: v.z }
	}
	pub fn new(x: f64, y: f64, z: f64) -> Vector3d {
		Vector3d { x: x, y: y, z: z }
	}
	pub fn new_a(v: &[f64]) -> Vector3d {
		Vector3d { x: v[0], y: v[1], z: v[2] }
	}
	
	pub fn abs(&self) -> Vector3d {
		let mut ret = Vector3d::default();
		unsafe { tsVector3d_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector3d, v1: &Vector3d) -> Vector3d {
		let mut ret = Vector3d::default();
		unsafe { tsVector3d_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector3d, v1: &Vector3d) -> Vector3d {
		let mut ret = Vector3d::default();
		unsafe { tsVector3d_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector3d, v1: &Vector3d) -> Vector3d {
		let mut ret = Vector3d::default();
		unsafe { tsVector3d_clamp(&mut ret, self, v0, v1); }
		ret
	}
	pub fn saturate(&self) -> Vector3d {
		let mut ret = Vector3d::default();
		unsafe { tsVector3d_saturate(&mut ret, self); }
		ret
	}
	
	pub fn dot(v0: &Vector3d, v1: &Vector3d) -> f64 {
		unsafe { tsVector3d_dot(v0, v1) }
	}
	pub fn cross(v0: &Vector3d, v1: &Vector3d) -> Vector3d {
		let mut ret = Vector3d::default();
		unsafe { tsVector3d_cross(&mut ret, v0, v1); }
		ret
	}
	
	pub fn length(&self) -> f64 {
		unsafe { tsVector3d_length(self) }
	}
	pub fn normalize(&self) -> Vector3d {
		let mut ret = Vector3d::default();
		unsafe { tsVector3d_normalize(&mut ret, self); }
		ret
	}
	
	pub fn lerp(v0: &Vector3d, v1: &Vector3d, k: f64) -> Vector3d {
		let mut ret = Vector3d::default();
		unsafe { tsVector3d_lerp(&mut ret, v0, v1, k); }
		ret
	}
	
	pub fn zero() -> Vector3d {
		Vector3d { x: 0.0, y: 0.0, z: 0.0 }
	}
	pub fn one() -> Vector3d {
		Vector3d { x: 1.0, y: 1.0, z: 1.0 }
	}
}

/*
 */
impl fmt::Display for Vector3d {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1} {2})", self.x, self.y, self.z)
	}
}

/*
 */
declare_neg_op!(Vector3d, tsVector3d_neg);

/*
 */
declare_scalar_op!(Vector3d, f64, Mul, mul, tsVector3d_mul1);
declare_scalar_op!(Vector3d, f64, Div, div, tsVector3d_div1);
declare_scalar_op!(Vector3d, f64, Add, add, tsVector3d_add1);
declare_scalar_op!(Vector3d, f64, Sub, sub, tsVector3d_sub1);

/*
 */
declare_vector_op!(Vector3d, Mul, mul, tsVector3d_mul);
declare_vector_op!(Vector3d, Div, div, tsVector3d_div);
declare_vector_op!(Vector3d, Add, add, tsVector3d_add);
declare_vector_op!(Vector3d, Sub, sub, tsVector3d_sub);
